# TelegramBotIceShop

./: .gitignore  README.md  pyproject.toml
app/: db.py  main.py
app/admin/: authentication.py  main.py  views.py
app/core/orders/: constants.py  models.py  repositories.py  services.py
app/core/users/: constants.py  models.py  repositories.py
app/handlers/: __init__.py  commands.py
app/infra/postgres/: db.py
app/jobs/: sync_roles.py
core/users/: repositories.py  services.py
infra/postgres/: db.py
settings/: config.py
