[project]
name = "telegrammboticecreamshop"
version = "0.1.0"
description = ""
authors = [
    {name = "george2066",email = "george2066@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python-telegram-bot = { version = "^20.0", extras = ["job-queue"] }
ptbcontrib = { git = "https://github.com/python-telegram-bot/ptbcontrib.git", branch = "main", extras = ["roles"] }
pydantic = { version = ">=2.10.6,<3.0.0" }
pydantic-settings = { version = ">=2.8.1,<3.0.0" }
sqlalchemy = { version = ">=2.0.38,<3.0.0" }
asyncpg = { version = ">=0.30.0,<0.31.0" }
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"
uvicorn = "^0.34.0"
starlette = "^0.46.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
